--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -45,10 +44,6 @@ cover/
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-.pybuilder/
-target/
-
 # Environments
 .env
 .venv
@@ -60,3 +55,6 @@ venv.bak/
 
 # PyCharm
 .idea/
+
+# Local stuffs
+dev/
